[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monstera"
version = "0.0.1"
authors = [
  { name="Dishant B.", email="code.dishb@gmail.com" },
]
description = "A cross-platform CLI to quickly retrieve system information to make issue management easier."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Bug Tracking"
]

[project.urls]
"Homepage" = "https://github.com/dishb/monstera"
"Issue Tracker" = "https://github.com/dishb/monstera/issues"
"Documentation": "https://github.com/dishb/monstera/tree/main/docs"
